--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,10 +7,8 @@
     tools:context=".HomeFragment"
     android:id="@+id/frameLayout">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <TextView
-        android:id="@+id/fragment_home_title"
+        android:id="@+id/fragment_home_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="132dp"
@@ -45,7 +43,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_home_title"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_home_text"
         tools:layout_conversion_absoluteHeight="98dp"
         tools:layout_conversion_absoluteWidth="148dp" />
 
